--- a/EDA_BS.ipynb
+++ b/EDA_BS.ipynb
@@ -1695,7 +1695,7 @@
     "- It will not be surprising to know that this feat is achieved in solo showdown(if so) \n",
     "- Why? Reasons:\n",
     ">- BEA: Higher damage<br>\n",
-    ">- MAX: Higer dps<br>\n",
+    ">- MAX: Higher dps<br>\n",
     ">- <b>eL pRiMo:</b> ![elprimo](https://raw.githubusercontent.com/sanjay-906/Brawl-Stars-Data-Analysis/main/utils/ezgif-2-860924572b.gif)\n"
    ]
   },
