--- a/EDA_BS.ipynb
+++ b/EDA_BS.ipynb
@@ -3333,7 +3333,7 @@
    "id": "0ad437b9",
    "metadata": {},
    "source": [
-    "- The title \"WORLD NO 1\" is held by Hyra\n",
+    "- <b>The title \"WORLD NO 1\" is held by Hyra\n"</b>,
     "- The number 2 and number 3 are Eqwaak and prostislavv"
    ]
   },
